Connect to packageService
